--- a/lab03/lab03_4_func_parametros.ipynb
+++ b/lab03/lab03_4_func_parametros.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "50.285714285714285"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,6 +434,42 @@
    "source": [
     "datos[1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COmo Formatear Strings (Uso de Format en Strings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La suma de 1 + 2 es igual a 3 y la resta de 1 - 2 es igual a -1, asi lo dice la Aritmetica'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'La suma de 1 + 2 es igual a {} y la resta de 1 - 2 es igual a {}, asi lo dice {}'.format(1 + 2, 1 - 2, 'la Aritmetica')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
